Создание контекста данных

--- a/PhoneBook.DbLib/PhoneBook.DbLib.csproj
+++ b/PhoneBook.DbLib/PhoneBook.DbLib.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
+        <ProjectReference Include="..\PhoneBook.Model\PhoneBook.Model.csproj" />
     </ItemGroup>
-
+    
 </Project>
