--- a/PhoneBook.AppConsole/PhoneBook.AppConsole.csproj
+++ b/PhoneBook.AppConsole/PhoneBook.AppConsole.csproj
@@ -7,4 +7,14 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\PhoneBook.DbLib\PhoneBook.DbLib.csproj" />
+      <ProjectReference Include="..\PhoneBook.Model\PhoneBook.Model.csproj" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+    
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
